--- a/index.html
+++ b/index.html
@@ -2,38 +2,42 @@
 
 <head>
   <meta charset="utf-8" />
+  <title>Heart Rate Monitoring System</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <title>Websocket</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 </head>
 
 <body>
   <h1 style="text-align: center;">Heart Rate Monitoring System</h1>
-  
+  <br>
   <div class="row" style="padding: 10px;">
     <div class="col-lg-7">
-      <canvas id="myChart" style="width:100%;"></canvas>
-
+      <div class="div-cards">
+        <canvas id="myChart"></canvas>
+      </div>
     </div>
     <div class="col-lg-3" style="text-align: center;">
-      <h4>BPM</h4>
-      <h1 id="bpm-h1"></h1>
-      <p id = "bpm-state"></p>
-
+      <div id="bpm-div" class="div-cards" style="padding: 4%;">
+        <h2>BPM</h2>
+        <br>
+        <h1 id="bpm-h1">-</h1>
+        <br>
+        <!-- <img src="https://i.pinimg.com/originals/0e/8f/93/0e8f9366cb396a13485588c267750ddd.gif" alt=""> -->
+        <p id="bpm-state"><em>Place your finger on the sensor</em></p> <!-- bpm status message -->
+      </div>
     </div>
-    <div class="col-lg-2">
-      <div style="overflow: scroll;
-      border: solid; height: 500px;
-      border-radius: 9px;" id="display"></div>
+
+    <div class="col-lg-2" style="text-align: center;">
+      <div id="display" style="overflow: scroll; height: 500px;width: 100%;" class="div-cards"></div>
       <br>
       <button class="btn btn-sm btn-dark" onclick="clearlog()">Clear Logs</button>
     </div>
-    
+
   </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
-  </script>
-
 
   <script>
     const labels = [];
@@ -53,7 +57,6 @@
       data: data,
 
       options: {
-
         responsive: true,
         elements: {
           point: {
@@ -61,19 +64,27 @@
           }
         },
         plugins: {
-
           title: {
             display: true,
             text: 'Min and Max Settings'
           }
         },
         scales: {
-
+          xAxes: [{
+            scaleLabel: {
+              display: true,
+              labelString: 'No. of beats'
+            }
+          }],
           yAxes: [{
             ticks: {
               min: 40,
               max: 150,
               stepSize: 10
+            },
+            scaleLabel: {
+              display: true,
+              labelString: 'BPM'
             }
           }]
         }
@@ -88,9 +99,6 @@
 
     function addData(chart, label, data) {
       chart.data.labels.push(label);
-      // chart.data.datasets.forEach((dataset) => {
-      //     dataset.data.push(data);
-      // });
 
       chart.data.datasets[0].data.push(data);
 
@@ -109,6 +117,7 @@
     var display = document.getElementById("display");
     var bpmDiv = document.getElementById("bpm-h1");
     var bpmState = document.getElementById("bpm-state");
+    var beatCount = 0;
 
     sock.onopen = function (event) {
       display.innerHTML += "connection succeeded <br />";
@@ -120,20 +129,21 @@
       // updateChart(parseInt(event.data));
       if (event.data.charAt(0) === 'A') {  // average BPM 
         bpmDiv.innerHTML = parseInt(event.data.substring(1, event.data.length));
-       //alert()
+        //alert()
       }
-      else if(event.data.charAt(0) === 'S'){ // finger status
-        if (event.data.charAt(1) === '2'){
+      else if (event.data.charAt(0) === 'S') { // finger status
+        if (event.data.charAt(1) === '2') {
           bpmState.innerHTML = "<em>Please place your finger on the sensor</em>";
         }
-        else if(event.data.charAt(1) === '3'){
+        else if (event.data.charAt(1) === '3') {
           bpmState.innerHTML = "...";
         }
       }
       else { // bpm values to be plotted in chart
-        addData(myChart, '', parseInt(event.data));
+        beatCount += 1;
+        addData(myChart, beatCount.toString(), parseInt(event.data));
       }
-     
+
     };
     function clearlog() {
       display.innerHTML = "";
